# industrial_core

industrial_msgs/: CMakeLists.txt  package.xml
simple_message/: CMakeLists.txt  package.xml
simple_message/include/: config.h.in
simple_message/include/simple_message/: byte_array.h  comms_fault_handler.h  joint_data.h  joint_feedback.h  joint_traj.h  joint_traj_pt.h  joint_traj_pt_full.h  log_wrapper.h  message_handler.h  message_manager.h  ping_handler.h  ping_message.h  robot_status.h  simple_comms_fault_handler.h  simple_message.h  simple_serialize.h  smpl_msg_connection.h  typed_message.h
simple_message/include/simple_message/messages/: joint_feedback_message.h  joint_message.h  joint_traj_pt_full_message.h  joint_traj_pt_message.h  robot_status_message.h
simple_message/include/simple_message/socket/: simple_socket.h  tcp_client.h  tcp_server.h  tcp_socket.h  udp_client.h  udp_server.h  udp_socket.h
simple_message/src/: byte_array.cpp  joint_data.cpp  joint_feedback.cpp  joint_traj.cpp  joint_traj_pt.cpp  joint_traj_pt_full.cpp  message_handler.cpp  message_manager.cpp  ping_handler.cpp  ping_message.cpp  robot_status.cpp  simple_comms_fault_handler.cpp  simple_message.cpp  smpl_msg_connection.cpp
simple_message/src/messages/: joint_feedback_message.cpp  joint_message.cpp  joint_traj_pt_full_message.cpp  joint_traj_pt_message.cpp  robot_status_message.cpp
simple_message/src/socket/: simple_socket.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp  udp_client.cpp  udp_server.cpp  udp_socket.cpp
